@@ -79,6 +79,7 @@ following names for their contribution to the product.
 * Brent G
 * Brianna Laugher
 * Carlin
+* Carsten Nielsen
 * Conrad Irwin
 * Dan Barrett
 * Dan Nessett
